Various panama code tweaks